<resources>
    <string name="app_name">Finn</string>
    <string name="title_home">Home</string>
    <string name="title_cash_flow">Cash Flow</string>
    <string name="good_morning">Good morning,</string>
    <string name="good_afternoon">Good afternoon,</string>
    <string name="good_evening">Good evening,</string>
    <string name="user_name">Thiago</string>
    <string name="my_accounts">My accounts</string>
    <string name="general_balance">General balance</string>
    <string name="balance">R$ 100,00</string>
    <string name="register_account">Register account</string>
    <string name="update_account">Update account</string>
    <string name="name_of_account">Name of account</string>
    <string name="save">Save</string>
    <string name="remove_account">Remove account</string>
    <string name="remove_account_message">You want to remove the %1$s account?</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>
    <string name="sucess_insert_account">Account saved successfully</string>
    <string name="failure_insert_account">Failed to save account</string>
    <string name="sucess_update_account">Account successfully updated</string>
    <string name="failure_update_account">"Failed to update account"</string>
    <string name="expense">Expense</string>
    <string name="revenue">Revenue</string>
    <string name="transaction_value">R$ 0,00</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="repeat_launch">Repeat launch</string>
    <string name="fixed">Fixed</string>
    <string name="installment">Installment</string>
</resources>